# crown

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.crown.sample.json  config.json  cs525_cheatsheet.txt
craq/: CMakeLists.txt  README.md
craq/configs/: cluster.sample.conf  vm_hosts.sample.csv
craq/include/: config.hpp  net.hpp  node_server.hpp  protocol.hpp  store.hpp
craq/scripts/: configure.sh  start_node.sh  vm_cluster.sh
craq/src/: config.cpp  leader_main.cpp  net.cpp  node_main.cpp  node_server.cpp  protocol.cpp  store.cpp
proto/: chain.proto
setup/: PROD_INTERACTIVE_README.md  README.md  aggregate_bench_results.py  crown_smoke_test.sh  generate_crown_config.py  generate_mode_configs.py  kill.bash  prod_hosts.csv  prod_hosts.txt  rerun.bash  run_prod_distributed_write_bench.bash  run_throughput_experiments.py  run_throughput_experiments.sh  sample_throughput_experiment_commands.md  setup.bash  start_server.bash  vm_setup.bash
src/client/: client.cpp  kv_client.cpp
src/node/: node.cpp  node.h  token_hash.h
src/replication/: replication_strategy.cpp  replication_strategy.h
src/replication/chain/: chain_replication.cpp  chain_replication.h
src/replication/common/: chain_style_replication_support.cpp  chain_style_replication_support.h
src/replication/craq/: craq_replication.cpp  craq_replication.h
src/replication/crown/: crown_replication.cpp  crown_replication.h
src/server/: server.cpp
